--- a/Python-Data-Science/requirements.txt
+++ b/Python-Data-Science/requirements.txt
@@ -6,6 +6,7 @@ et_xmlfile==2.0.0
 Flask==3.1.2
 flask-cors==6.0.1
 fonttools==4.56.0
+gunicorn==22.0.0
 itsdangerous==2.2.0
 jax==0.5.0
 jaxlib==0.5.0
